@@ -116,22 +116,9 @@ Create statement::
     >>> StatementJournal = Model.get('account.statement.journal')
     >>> Statement = Model.get('account.statement')
     >>> StatementLine = Model.get('account.statement.line')
-    >>> Sequence = Model.get('ir.sequence')
-    >>> SequenceType = Model.get('ir.sequence.type')
     >>> AccountJournal = Model.get('account.journal')
 
-    >>> sequence_type, = SequenceType.find([('name', '=', "Account Journal")])
-    >>> sequence = Sequence(name='Satement',
-    ...     sequence_type=sequence_type,
-    ...     company=company,
-    ... )
-    >>> sequence.save()
-    >>> account_journal = AccountJournal(name='Statement',
-    ...     type='statement',
-    ...     sequence=sequence,
-    ... )
-    >>> account_journal.save()
-
+    >>> account_journal, = AccountJournal.find([('code', '=', 'STA')], limit=1)
     >>> statement_journal = StatementJournal(name='Test',
     ...     journal=account_journal,
     ...     account=cash,
