@@ -8,6 +8,7 @@ depends:
     currency
     party
 xml:
+    account.xml
     statement.xml
     journal.xml
     message.xml
